# CupidMeet

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  pom.xml
telegram-bot-service/: db.json  pom.xml  pyproject.toml  run.py
telegram-bot-service/app/: handlers.py  keyboards.py  middlewares.py
telegram-bot-service/app/api/: connection.py
telegram-bot-service/app/fakeData/: utils.py
telegram-bot-service/app/handlers/: handlers.py  register.py
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/: TelegramBotServiceApplication.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/client/: LocationDataServiceClient.java  UserDetailsServiceClient.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/command/: Command.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/config/: MessageSourceConfig.java  RedisConfig.java  TelegramClientConfig.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/controller/: TelegramBot.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/handler/: BotStateHandler.java  DialogHandler.java  ExtendedDialogHandler.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/keyboard/: Keyboard.java
telegram-bot-service/src/main/java/kz/baltabayev/telegrambotservice/service/: BotStateService.java  (+2 more)
telegram-bot-service/src/main/resources/: application.yml
telegram-bot-service/src/main/resources/i18n/: messages_en.properties  messages_kz.properties  messages_ru.properties
(+527 files in other folders)
