[tool.poetry]
name = "poetry init"
version = "0.1.0"
description = ""
authors = ["DarthZiel <Studerzhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
